# crunch

./: .gitignore  CMakeLists.txt
crnlib/: CMakeLists.txt
crnlib/include/: crn_comp.h  crn_dxt.h  crn_dxt_hc.h  crn_etc.h  crn_image_utils.h  crn_mipmapped_texture.h  crn_pixel_format.h  crn_texture_comp.h  crn_texture_file_types.h  dds_defs.h
crnlib/src/: CMakeLists.txt  crn_decomp.cpp  crn_image_utils.cpp  crn_mem.cpp  crn_mipmapped_texture.cpp  crn_texture_conversion.cpp  crn_texture_file_types.cpp  crn_vector.cpp  crnlib.cpp
crunch_cli/: CMakeLists.txt
crunch_cli/src/: CMakeLists.txt  crunch.cpp
